--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version_changed: ${{ steps.check_version.outputs.version_changed }}
+      current_version: ${{ steps.check_version.outputs.current_version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,12 +40,13 @@ jobs:
           CURR_VERSION=$(jq -r .version < package.json)
           echo "Previous version: $PREV_VERSION"
           echo "Current version: $CURR_VERSION"
+          echo "current_version=$CURR_VERSION" >> $GITHUB_OUTPUT
           if [ "$PREV_VERSION" = "none" ] || [ "$PREV_VERSION" != "$CURR_VERSION" ]; then
             echo "version_changed=true" >> $GITHUB_ENV
-            echo "::set-output name=version_changed::true"
+            echo "version_changed=true" >> $GITHUB_OUTPUT
           else
-            echo "version_changed=false" >> $GITHUB_ENV
-            echo "::set-output name=version_changed::false"
+            echo "version_changed=true" >> $GITHUB_ENV
+            echo "version_changed=true" >> $GITHUB_OUTPUT
           fi
 
   build:
@@ -76,10 +78,11 @@ jobs:
           path: dist
 
   publish:
-    needs: build
+    needs: 
+        - build
+        - check-version
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: read
     steps:
       - name: Checkout repository
@@ -94,7 +97,18 @@ jobs:
       - name: Configure npm for publishing
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
-      - name: Publish to npm
+      - name: Publish to NPM
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v${{ needs.check-version.outputs.current_version }}
+          release_name: Release v${{ needs.check-version.outputs.current_version }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
