--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -63,7 +63,7 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Building codebase
         run: npm run build
