--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -83,7 +83,7 @@ jobs:
         - check-version
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -103,7 +103,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        id: create_release
         uses: actions/create-release@v1
         with:
           tag_name: v${{ needs.check-version.outputs.current_version }}
