--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@sovgut/state",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "type": "module",
+  "repository": "https://github.com/Sovgut/state.git",
+  "author": {
+    "name": "Serhii Sovhut",
+    "url": "https://github.com/Sovgut"
+  },
   "scripts": {
     "test": "vitest run",
     "build": "tsc && vite build"
