--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,34 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist-ssr
+*.local
+src
+
+# Coverage
+coverage
+
+# Editor directories and files
+.vscode
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+package-lock.json
 vite.config.ts
 tsconfig.json
-src
-node_modules
 .gitignore
 README.md
 LICENSE
+.github
+.DS_Store
