--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
             echo "version_changed=true" >> $GITHUB_OUTPUT
           fi
 
-  test:
+  install-dependencies:
     runs-on: ubuntu-latest
     needs: check-version
     if: needs.check-version.outputs.version_changed == 'true'
@@ -53,7 +53,30 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts
+
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v4
+        with:
+          path: ./node_modules
+          key: modules-${{ hashFiles('package-lock.json') }}
+        
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci --ignore-scripts
+
+  test:
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts
 
       - name: Cache dependencies
         id: cache
@@ -71,7 +94,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: install-dependencies
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -79,7 +102,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts
 
       - name: Cache dependencies
         id: cache
@@ -104,6 +127,7 @@ jobs:
   publish:
     needs:
       - build
+      - test
     runs-on: ubuntu-latest
     permissions:
       contents: read
