--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,10 @@ jobs:
           else
             echo "version_changed=false" >> $GITHUB_ENV
             echo "version_changed=false" >> $GITHUB_OUTPUT
-          fi
+
+      - name: Output version_changed
+        run: |
+          echo "Version changed: ${{ steps.check_version.outputs.version_changed }}"
 
   install-dependencies:
     runs-on: ubuntu-latest
