--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,26 +1,36 @@
-name: Reusable workflow
-
 on:
-  workflow_call:
-    # Map the workflow outputs to job outputs
-    outputs:
-      firstword:
-        description: "The first output string"
-        value: ${{ jobs.example_job.outputs.output1 }}
-      secondword:
-        description: "The second output string"
-        value: ${{ jobs.example_job.outputs.output2 }}
+  push:
+    branches:
+      - main
+    paths:
+      - "package.json"
 
 jobs:
-  example_job:
-    name: Generate output
-    runs-on: ubuntu-latest
-    # Map the job outputs to step outputs
-    outputs:
-      output1: ${{ steps.step1.outputs.firstword }}
-      output2: ${{ steps.step2.outputs.secondword }}
-    steps:
-      - id: step1
-        run: echo "firstword=hello" >> $GITHUB_OUTPUT
-      - id: step2
-        run: echo "secondword=world" >> $GITHUB_OUTPUT
+  check-version:
+    uses: Sovgut/state/.github/workflows/check-version.yml@main
+
+  build:
+    needs:
+      - check-version
+    if: needs.check-version.outputs.is_changed == 'true'
+    uses: Sovgut/state/.github/workflows/build.yml@main
+    with:
+      node_version: '20.x'
+      package_version: ${{ needs.check-version.outputs.version }}
+
+  test:
+    needs:
+      - check-version
+      - build
+    uses: Sovgut/state/.github/workflows/test.yml@main
+    with:
+      node_version: '20.x'
+
+  deploy:
+    needs:
+      - check-version
+      - build
+      - test
+    uses: Sovgut/state/.github/workflows/deploy.yml@main
+    with:
+      package_version: ${{ needs.check-version.outputs.version }}
