--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -4,10 +4,11 @@ on:
   workflow_call:
     outputs:
       version:
-        description: 'Package version data'
-        value:
-          - ${{ steps.check_version.outputs.is_changed }}
-          - ${{ steps.check_version.outputs.version }}
+        description: 'Package version'
+        value: ${{ steps.check_version.outputs.version }}
+      is_changed:
+        description: 'Package version state'
+        value: ${{ steps.check_version.outputs.is_changed }}
 
 jobs:
   check-version:
