--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -6,17 +6,17 @@ on:
       version:
         description: 'Package version'
         value: ${{ jobs.check-version.outputs.version }}
-      is_changed:
+      is-changed:
         description: 'Package version state'
-        value: ${{ jobs.check-version.outputs.is_changed }}
+        value: ${{ jobs.check-version.outputs.is-changed }}
 
 jobs:
   check-version:
     runs-on: ubuntu-latest
 
     outputs:
-      is_changed: ${{ steps.check_version.outputs.is_changed }}
-      version: ${{ steps.get_current_version.outputs.version }}
+      is_changed: ${{ steps.check-version.outputs.is-changed }}
+      version: ${{ steps.get-current-version.outputs.version }}
 
     steps:
       - name: Checkout repository
@@ -25,30 +25,30 @@ jobs:
           fetch-depth: 2
 
       - name: Check version
-        id: get_current_version
+        id: get-current-version
         run: |
           CURR_VERSION=$(grep '"version":' package.json | sed -E 's/.*"([^"]+)".*/\1/')
           echo "Current version in package.json: $CURR_VERSION"
           echo "version=$CURR_VERSION" >> $GITHUB_OUTPUT
 
       - name: Get previous version from package.json
-        id: get_previous_version
+        id: get-previous-version
         run: |
           PREV_VERSION=$(git show HEAD~1:package.json | grep '"version":' | sed -E 's/.*"([^"]+)".*/\1/' || echo "none")
           echo "Previous version in package.json: $PREV_VERSION"
-          echo "prev_version=$PREV_VERSION" >> $GITHUB_OUTPUT
+          echo "prev-version=$PREV_VERSION" >> $GITHUB_OUTPUT
 
       - name: Check version increment
-        id: check_version
+        id: check-version
         run: |
-          echo "Previous version: ${{ steps.get_previous_version.outputs.prev_version }}"
-          echo "Current version: ${{ steps.get_current_version.outputs.version }}"
-          if [ "$PREV_VERSION" = "none" ] || [ "${{ steps.get_current_version.outputs.version }}" != "${{ steps.get_previous_version.outputs.prev_version }}" ]; then
-            echo "is_changed=true" >> $GITHUB_OUTPUT
+          echo "Previous version: ${{ steps.get-previous-version.outputs.prev-version }}"
+          echo "Current version: ${{ steps.get-current-version.outputs.version }}"
+          if [ "$PREV_VERSION" = "none" ] || [ "${{ steps.get-current-version.outputs.version }}" != "${{ steps.get-previous-version.outputs.prev-version }}" ]; then
+            echo "is-changed=true" >> $GITHUB_OUTPUT
           else
-            echo "is_changed=false" >> $GITHUB_OUTPUT
+            echo "is-changed=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Output package version state
         run: |
-          echo "Version changed: ${{ steps.check_version.outputs.is_changed }}"
+          echo "Version changed: ${{ steps.check-version.outputs.is-changed }}"
