--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,10 @@ name: Deploy
 on:
   workflow_call:
     inputs:
+      node-version:
+        description: "Node version"
+        required: true
+        type: string
       package-version:
         description: "Package version"
         required: true
@@ -23,8 +27,12 @@ jobs:
           name: dist-${{inputs.package-version}}
           path: dist
 
-      - name: Configure npm for publishing
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          always-auth: true
+          node-version: ${{ inputs.node-version }}
+          registry-url: https://registry.npmjs.org
 
       - name: Publish to NPM
         run: npm publish --access public
