--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@sovgut/state",
   "version": "2.0.19",
   "type": "module",
-  "repository": "https://github.com/Sovgut/state.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sovgut/state.git"
+  },
   "author": {
     "name": "Serhii Sovhut",
     "url": "https://github.com/Sovgut"
