--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
           node-version: ${{ inputs.node-version }}
           registry-url: "https://registry.npmjs.org"
 
+      - name: test
+        run: cat ./.npmrc
+
       - name: Publish to NPM
         run: npm publish --access public
         env:
