--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,11 @@ jobs:
 
       - name: Use Node.js
         uses: actions/setup-node@v4
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
-          always-auth: true
           node-version: ${{ inputs.node-version }}
-          registry-url: "https://registry.npmjs.org"
+
+      - name: Configure npm for publishing
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > $NPM_CONFIG_USERCONFIG
 
       - name: Publish to NPM
         run: npm publish --access public
