--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -11,6 +11,15 @@ on:
         value: ${{ jobs.check-version.outputs.is-changed }}
 
 jobs:
+  git-checkout:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
   check-version:
     runs-on: ubuntu-latest
 
@@ -19,11 +28,6 @@ jobs:
       version: ${{ steps.get-current-version.outputs.version }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
       - name: Check version
         id: get-current-version
         run: |
