--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -5,14 +5,18 @@ on:
     outputs:
       version:
         description: 'Package version'
-        value: ${{ jobs.check-version.outputs.version }}
+        value: ${{ jobs.current-version.outputs.version }}
       is-changed:
         description: 'Package version state'
         value: ${{ jobs.check-version.outputs.is-changed }}
 
 jobs:
-  git-checkout:
+  current-version:
     runs-on: ubuntu-latest
+    environment: Version Check
+
+    outputs:
+      version: ${{ steps.get-current-version.outputs.version }}
 
     steps:
       - name: Checkout repository
@@ -20,21 +24,26 @@ jobs:
         with:
           fetch-depth: 2
 
-  check-version:
-    needs: git-checkout
-    runs-on: ubuntu-latest
-
-    outputs:
-      is-changed: ${{ steps.check-version.outputs.is-changed }}
-      version: ${{ steps.get-current-version.outputs.version }}
-
-    steps:
       - name: Check version
         id: get-current-version
         run: |
           CURR_VERSION=$(grep '"version":' package.json | sed -E 's/.*"([^"]+)".*/\1/')
           echo "Current version in package.json: $CURR_VERSION"
           echo "version=$CURR_VERSION" >> $GITHUB_OUTPUT
+
+  check-version:
+    needs: current-version
+    runs-on: ubuntu-latest
+    environment: Version Check
+
+    outputs:
+      is-changed: ${{ steps.check-version.outputs.is-changed }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - name: Get previous version from package.json
         id: get-previous-version
@@ -47,7 +56,7 @@ jobs:
         id: check-version
         run: |
           echo "Previous version: ${{ steps.get-previous-version.outputs.prev-version }}"
-          echo "Current version: ${{ steps.get-current-version.outputs.version }}"
+          echo "Current version: ${{ needs.current-version.outputs.version }}"
           if [ "$PREV_VERSION" = "none" ] || [ "${{ steps.get-current-version.outputs.version }}" != "${{ steps.get-previous-version.outputs.prev-version }}" ]; then
             echo "is-changed=true" >> $GITHUB_OUTPUT
           else
