--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,12 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
+          always-auth: true
           node-version: ${{ inputs.node-version }}
+          registry-url: "https://registry.npmjs.org"
 
-      - name: Configure npm for publishing
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Configure NPM to use registry with authentication
+        run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
 
       - name: Publish to NPM
         run: npm publish --access public
