--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ on:
         description: "Package version"
         required: true
         type: string
+    secrets:
+      NPM_TOKEN:
+        required: true
 
 jobs:
   deploy:
