--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,6 +38,8 @@ jobs:
       - build
       - test
     uses: Sovgut/state/.github/workflows/deploy.yml@main
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     with:
       node-version: '20.x'
       package-version: ${{ needs.check-version.outputs.version }}
