--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,13 +31,26 @@ jobs:
     with:
       node-version: '20.x'
 
-  deploy:
+  deploy-npm:
     name: Deploy
     needs:
       - check-version
       - build
       - test
-    uses: Sovgut/state/.github/workflows/deploy.yml@main
+    uses: Sovgut/state/.github/workflows/deploy-npm.yml@main
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    with:
+      node-version: '20.x'
+      package-version: ${{ needs.check-version.outputs.version }}
+
+  deploy-github:
+    name: Deploy
+    needs:
+      - check-version
+      - build
+      - test
+    uses: Sovgut/state/.github/workflows/deploy-github.yml@main
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     with:
