--- a/.github/workflows/deploy-github.yml
+++ b/.github/workflows/deploy-github.yml
@@ -12,7 +12,7 @@ on:
         required: true
         type: string
     secrets:
-      NPM_TOKEN:
+      GITHUB_TOKEN:
         required: true
 
 jobs:
@@ -42,4 +42,4 @@ jobs:
       - name: Publish to Github
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
