--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,7 @@ jobs:
       - test
     uses: Sovgut/state/.github/workflows/deploy-github.yml@main
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
       node-version: '20.x'
       package-version: ${{ needs.check-version.outputs.version }}
