--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,11 +9,11 @@ on:
 
 jobs:
   check-version:
-    name: Version Check
+    name: Package
     uses: Sovgut/state/.github/workflows/check-version.yml@main
 
   build:
-    name: Build
+    name: Package
     needs:
       - check-version
     if: needs.check-version.outputs.is-changed == 'true'
@@ -23,7 +23,7 @@ jobs:
       package-version: ${{ needs.check-version.outputs.version }}
 
   test:
-    name: Test
+    name: Package
     needs:
       - check-version
     if: needs.check-version.outputs.is-changed == 'true'
@@ -32,7 +32,7 @@ jobs:
       node-version: '20.x'
 
   deploy-npm:
-    name: Deploy
+    name: Package
     needs:
       - check-version
       - build
@@ -45,7 +45,7 @@ jobs:
       package-version: ${{ needs.check-version.outputs.version }}
 
   deploy-github:
-    name: Deploy
+    name: Package
     needs:
       - check-version
       - build
