--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
         "./src/*"
       ]
     },
-    "removeComments": false
+    "removeComments": false,
+    "declaration": true,
+    "declarationDir": "./dist"
   },
   "include": [
     "src"
